# FlyCore

./: .gitignore  CMakeLists.txt  README.md  scene.fbx  scene1.fbx
3dparty/: glad.c
3dparty/include/glad/: glad.h
Assets/: player.fbx  scene1.fbx
Framework/: CMakeLists.txt  IEvent.h  ILayer.h  IModule.h  INoCopy.h  IRenderObject.h  IRenderer.h  IScene.cpp  IScene.h  UI.cpp  UI.h  Utility.cpp  Utility.h  Window.cpp  Window.h  imgui.h  stdafx.h
Game/: CMakeLists.txt  game.cpp
Gameplay/: BaseCamera.cpp  BaseCamera.h  CMakeLists.txt  Component.h  Director.cpp  Director.h  Entity.cpp  Entity.h  InputComponent.cpp  InputComponent.h  RenderComponent.cpp  RenderComponent.h  Scene.cpp  Scene.h  System.h  TransformComponent.cpp  TransformComponent.h  stdafx.h
Renderer/: CMakeLists.txt  D3D12Buffer.cpp  D3D12Buffer.h  D3D12CmdAllocatorPool.cpp  D3D12CmdAllocatorPool.h  D3D12CmdContext.cpp  D3D12CmdContext.h  D3D12CmdManager.cpp  D3D12CmdManager.h  D3D12CmdQueue.cpp  D3D12CmdQueue.h  D3D12Common.h  D3D12DescHeap.cpp  D3D12DescHeap.h  D3D12DescManager.cpp  D3D12DescManager.h  D3D12Device.cpp  D3D12Device.h  D3D12GraphicsContext.cpp  D3D12GraphicsContext.h  D3D12RenderCmd.cpp  D3D12RenderCmd.h  D3D12RenderOjbec.cpp  D3D12RenderOjbec.h  D3D12Renderer.cpp  D3D12Renderer.h  D3D12Resource.h  D3D12Texture.cpp  D3D12Texture.h  D3D12UI.cpp  D3D12UI.h  forward_ps.hlsl  forward_vs.hlsl  frame_quad.hlsl  frame_quad_ps.hlsl  frame_quad_vs.hlsl  imgui_impl_dx12.cpp  imgui_impl_dx12.h  lightcull_cs.hlsl  shader_common.hlsli  (+7 more)
Utility/: AssetLoader.cpp  AssetLoader.h  CMakeLists.txt  FbxLoader.cpp  FbxLoader.h  stdafx.h
